# DFA_NFA-Simulator

./: IntSet.h  README.txt  dfa.h
P1/: CMakeLists.txt  IntSet.c  LinkedList.c  LinkedList.h  README.txt  dfa.c  main.c  nfa.c  nfa.h  nfa_to_dfa.c  nfa_to_dfa.h
